src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_the_empty_state_when_nothing_matches.snap
---
source: src/ui/render.rs
expression: screen(&state)
---
" Panes   Branches                                                       "
"nothing matches                                                         "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"/zzzz█                                                                  "
"↵ keep filter  esc clear  ↑↓ move                                       "
