src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_the_filter_line_while_searching.snap
---
source: src/ui/render.rs
expression: screen(&state)
---
" Panes   Branches                                                       "
"▾ me/app                                                                "
"  ○ feat/login                                        /wt/app/feat-login"
"    ○ codex                                                        w2:p1"
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"/codex█                                                                 "
"↵ keep filter  esc clear  ↑↓ move                                       "
