src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_the_listing_it_starts_with_as_a_quieter_wait_of_the_same_shape.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 110, 8)"
---
" / search branches█  ⠋ reading the remote…                                             ⇅ state ↓   5 branches "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"   ● feat/login   running      #123 Add the login screen (draft)                                             █"
"   ○ fix/crash    checked out  latest work on fix/crash                                                      █"
"   · main         local        latest work on main                                                           █"
"   · chore/deps   local        latest work on chore/deps                                                     │"
" me/app · feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) ────────────────────"
" type to filter  ↵ choose  ctrl+o order  ctrl+r reverse  ctrl+f fetch  ⇥ panes  ctrl+u clear  esc back        "
