src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_the_offer_to_create_a_branch_that_does_not_exist.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 92, 10)"
---
" / feat/brand-new█                                                     ⇅ state ↓   1 branch "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   + feat/brand-new  create                                                                 "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" me/app · feat/brand-new · does not exist yet ──────────────────────────────────────────────"
" type to filter  ↵ choose  ctrl+o order  ctrl+r reverse  ctrl+f fetch  ⇥ panes  esc back    "
