src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_the_repo_worktree_pane_tree.snap
---
source: src/ui/render.rs
expression: "screen(&PanesState::new(tree()))"
---
" Panes   Branches                                                       "
"▾ me/app                                                                "
"  ● main                                                        /src/app"
"    ● claude                                                       w1:p1"
"    · shell                                                        w1:p2"
"  ○ feat/login                                        /wt/app/feat-login"
"    ○ codex                                                        w2:p1"
"  ○ fix/crash  no pane                                 /wt/app/fix-crash"
"▾ me/site                                                               "
"  ● develop                                                    /src/site"
"    ◆ claude                                                       w3:p1"
"                                                                        "
"                                                                        "
"                                                                        "
"press / to filter                                                       "
"↵ jump  n new pane  ⇥ branches  / filter  h other  r reload  q quit     "
